--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,6 +89,11 @@ header .nav>li>a:focus, .nav>li>a:hover {background-color: #ff0066; color: #fff;
 #top-pages .block2{ margin-bottom: 20px; min-height: 250px; overflow: hidden; position: relative; }
 #top-pages .block2 .part{height: 250px;  padding: 0; transition:  0.5s;}
 #top-pages .block2 .title{position: absolute; padding: 20px; background: #f5f5f5; }
+#top-pages .block2 .title:before{
+  content: ''; position: absolute; left: -60px; top: 60px;
+  border: 30px solid transparent; border-right: 30px solid rgba(255, 255, 255, 0.8);
+}
+#top-pages .block2:hover .title:before{border: none;}
 #top-pages .block2 .description{padding: 20px; background: #ff0066; color:#fff; }
 #top-pages .block2 .description p{ height: 160px; overflow: hidden;}
 #top-pages .block2 .image img{width: 100%; height: 100%; margin-left: 0; }
@@ -108,6 +113,10 @@ header .nav>li>a:focus, .nav>li>a:hover {background-color: #ff0066; color: #fff;
   transform:translateX(0); 
 }
 @media (max-width: 768px) { 
+  #top-pages .block2 .title:before{
+    left: 60px; top: -60px;
+    border: 30px solid transparent; border-bottom: 30px solid rgba(255, 255, 255, 0.8);
+  }
   #top-pages .block2 .title{padding: 20px; background: #f6f6f6;
     -moz-transform: translateY(100%); 
     -ms-transform: translateY(100%);
