--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ body{font-size: 16px;}
 h1, h2, h3, h4{color: #000}
 
 /*btn*/
-.btn{height: 40px; border-radius: 20px; font-size: 18px; text-decoration: none; transition:.5s;}
+.btn{height: 40px; border-radius: 20px; padding:5px 40px; font-size: 18px; text-decoration: none; transition:.5s;}
 .btn-border{background: #fff; color: #ff0066; border:1px solid #ff0066;}
 .btn-border:hover{background: #ff0066; color: #fff; border-color:#fff}
 .btn-solid{background: #ff0066; color: #fff; text-transform:uppercase; }
@@ -90,8 +90,8 @@ border-radius: 10px;
   -o-transform: translateX(0);
   transform:translateX(0);  
 }
-#top-pages .block .description{padding: 20px; position: absolute; background: #ff0066; color:#fff; left: 50%; }
-#top-pages .block .description p{ height: 160px; overflow: hidden;}
+#top-pages .block .description{padding: 20px; position: absolute;  left: 50%; }
+#top-pages .block .description p{ height: 160px; overflow: hidden; color: #ff0066;}
 #top-pages .block .description .btn{padding: 5px 50px;}
 #top-pages .block:hover .title{ background: rgba(255, 255, 255, 0.8);
   -moz-transform: translateX(-100%); 
@@ -114,15 +114,15 @@ border-radius: 10px;
 
 /*test*/
 #top-pages .block2{ margin-bottom: 20px; min-height: 250px; overflow: hidden; position: relative; }
-#top-pages .block2 .part{height: 250px;  padding: 0; transition:  0.5s;}
+#top-pages .block2 .part{height: 250px;  padding: 0; transition:  1s;}
 #top-pages .block2 .title{position: absolute; padding: 20px; background: #f5f5f5; }
 #top-pages .block2 .title:before{
-  content: ''; position: absolute; left: -60px; top: 60px;
-  border: 30px solid transparent; border-right: 30px solid rgba(255, 255, 255, 0.8);
+  content: ''; position: absolute; left: -20px; top: 40px;
+  border: 20px solid transparent; border-right: 20px solid #f6f6f6; border-left: 0;
 }
 #top-pages .block2:hover .title:before{border: none;}
-#top-pages .block2 .description{padding: 20px; background: #ff0066; color:#fff; }
-#top-pages .block2 .description p{ height: 160px; overflow: hidden;}
+#top-pages .block2 .description{padding: 20px; }
+#top-pages .block2 .description p{ height: 160px; overflow: hidden; color:#ff0066 }
 #top-pages .block2 .image img{width: 100%; height: 100%; margin-left: 0; }
 #top-pages .block2 .title{padding: 20px; background: #f6f6f6;
   -moz-transform: translateX(100%); 
@@ -141,8 +141,8 @@ border-radius: 10px;
 }
 @media (max-width: 768px) { 
   #top-pages .block2 .title:before{
-    left: 60px; top: -60px;
-    border: 30px solid transparent; border-bottom: 30px solid rgba(255, 255, 255, 0.8);
+    left: 40px; top: -40px;
+    border: 20px solid transparent; border-bottom: 20px solid #f6f6f6;
   }
   #top-pages .block2 .title{padding: 20px; background: #f6f6f6;
     -moz-transform: translateY(100%); 
