--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,7 +151,9 @@ footer {background: #ff0066; color: #fff; padding-bottom: 40px;}
 #brend-line ul{ margin: 0; padding: 0; list-style: none; display: table; width: 100%; border-collapse: collapse;}
 #brend-line li{display: table-cell; vertical-align: middle; text-align: center; height: 90px; border: 1px solid; border-width: 0 1px;}
 #collect .post-logo{margin-top: 50px; text-align: center;}
-#collect .gallery-image{height: 260px; overflow: hidden; position: relative;}
+#collect .gallery-cell{padding:2px}
+#collect .gallery-image{height: 280px; overflow: hidden; position: relative;}
+#collect .gallery-image img{width: 100%;}
 #collect .gallery-image .description{position: absolute; background: rgba(0,0,0,.6); width: 100%; height: 100%; top: 0; left: 0; padding: 20px; display: none; color: #ccc;}
 #collect .gallery-image:hover .description{display: block;}
 #collect .gallery-contact{padding-top: 40px; }
