--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,7 +92,7 @@ border-radius: 10px;
 
 /*top-pages*/
 #top-pages{padding-bottom: 30px;}
-
+#top-pages .block-btn{margin-top: 40px;}
 #top-pages .block{ margin-bottom: 20px; border:6px solid #edf2f9; border-radius: 5px; min-height: 250px; overflow: hidden; position: relative; }
 #top-pages .block .part{height: 250px;  padding: 0; transition:  1s;}
 #top-pages .block .title{position: absolute; padding: 20px; background: #f5f5f5; }
@@ -137,11 +137,16 @@ border-radius: 10px;
 
 /*advice*/
 #advice{padding-bottom: 50px;}
+#advice .block-btn{margin-top: 40px;}
 #advice h2{ font-size: 40px;}
-#advice p{font-size: 18px;}
 #advice em{color: #ff0066; font-style:normal;}
-#advice .block{padding: 5px;}
-#advice .block p{background-color: #edf2f9; height: 250px; padding: 30px;}
+#advice .block{padding: 5px;  }
+#advice .block-hover{height: 250px; position: relative;}
+#advice .block .title, #advice .block .description{height: 100%; width: 100%; position: absolute;}
+#advice .block .title{background-color: #edf2f9; font-size: 18px;  padding: 30px;}
+#advice .block .description{background:#fff; padding: 5px; font-size: 16px;  top: 0; opacity: 0; transition: 0.5s;}
+#advice .block:hover .description{opacity: 1}
+
 
 /*footer*/
 footer .footer-bg{background: url('/img/bg/bg-footer-40perc.jpg') no-repeat; background-size: cover; padding: 40px 0;}
