--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,7 +43,7 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
 .picto-mail{background-image: url('../img/icon/picto-mail.png');}
 
 /*slider*/
-#slider{}
+#slider{position: relative;}
 #slider p{font-size: 18px;}
 #slider {  background: url('../img/bg/bg-50perc.jpg') no-repeat; background-size: cover; }
 #slider .left-block{padding: 120px 30px;}
@@ -57,6 +57,12 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
 @media (max-width: 768px) {
   #slider .right-block{padding: 20px 0;} 
 }
+#snowflake{position: absolute; width: 100%; height: 100%; top: 0; left: 0; overflow: hidden;}
+.parallax-layer {position: absolute;}
+/*#snowflake img{max-width: 100%;}*/
+
+
+
 #slider .carousel-indicators {bottom: -45px;}
 #slider .carousel-indicators .active {background-color:#ff0066;}
 #slider .carousel-indicators li{margin: 1px 15px;}
@@ -161,7 +167,7 @@ footer .linegray .menu-item{padding-left: 20px}
 
 
 /*pages*/
-
+#port{background-color: #000;}
 
 /*page-collect*/
 #collect .galleries{background:#edf2f9; padding: 30px 0 }
