--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,7 +57,10 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
 @media (max-width: 768px) {
   #slider .right-block{padding: 20px 0;} 
 }
-#snowflake{position: absolute; width: 100%; height: 100%; top: 0; left: 0; overflow: hidden;}
+/*#slider .text-slide-block{z-index: 50}*/
+
+
+#snowflake{ position: absolute; width: 100%; height: 100%; top: 0; left: 0; overflow: hidden;}
 .parallax-layer {position: absolute;}
 /*#snowflake img{max-width: 100%;}*/
 
