--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: BirchCTT; 
+    src: url('../fonts/birchctt.ttf'); 
+}
+
 html, body{ font-family: 'PT Serif', serif; }
 html{position: relative; }
 body{font-size: 16px;}
@@ -31,13 +36,20 @@ a:hover{color: #8e3d5e; text-decoration: none;}
 
 
 /*heager*/
-header .main-logo{margin-bottom: -50px; margin-top:15px;}
+header .main-logo{margin-bottom: -50px; margin-top:15px; z-index: 10;}
 header .block-contact{margin-top: 20px; float: right;}
 header a{color: #000; }
 header .block-contact p span{display: inline-block; width: 150px;}
-header .nav{margin-top: 10px;}
+#main-menu{ background-color: #ecf1f9; ;}
+#main-menu a{ font-family: BirchCTT; font-size: 20px; word-wrap: break-word; width: 200px; height: 70px;  }
+#main-menu ul{ margin: 0; padding: 0; list-style: none; display: table; width: 100%; border-collapse: collapse;}
+#main-menu li{display: table-cell;  border-left: 1px solid;}
+#main-menu li:last-of-type{border-right:1px solid #000;}
+#main-menu .nav>li>a:focus, #main-menu .nav>li>a:hover, #main-menu .nav>li.active>a{background-color: #e1eaee; color: #000;}
+/*header .nav{margin-top: 10px;}
 header .nav>li>a:focus, .nav>li>a:hover {background-color: #ff0066; color: #fff;}
 header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
+*/
 .picto {display: inline-block; margin-right: 10px; width: 26px; height: 26px; vertical-align: middle; }
 .picto-phone{background-image: url('../img/icon/picto-phone.png');}
 .picto-mail{background-image: url('../img/icon/picto-mail.png');}
@@ -45,17 +57,44 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
 /*slider*/
 #slider{position: relative;}
 #slider p{font-size: 18px;}
-#slider {  background: url('../img/bg/bg-50perc.jpg') no-repeat; background-size: cover; }
+#slider {  background: url('../img/bg/bg6-10.jpg') no-repeat; background-size: cover; }
 #slider .left-block{padding: 120px 30px;}
 #slider .left-block .title{ font-size: 40px; line-height: 34px; height: 100%;}
 #slider .left-block .title span{color:#ff0066; }
-#slider .right-block{padding-top: 120px; color: #fff;}
-#slider .right-block .top-line{background:#ff0066; color: #fff; margin: 0 2px; padding: 4px 0;}
-#slider .right-block .slide{padding: 0 2px;}
-#slider .right-block .slide p{position: absolute; width: 100%; padding: 4px 0; margin: 0; bottom: 0; background-color: rgba(0, 0, 0, .3); }
+#slider .right-block{max-width: 694px; padding-top: 120px; color: #fff;}
+#slider .right-block .top-line{background:#ff0066; color: #fff; margin-bottom: 0; padding: 4px 0;}
+/*#slider .right-block .slide{padding: 0 2px;}*/
+#slider .right-block .title{position: absolute; width: 100%; padding: 4px 0; margin: 0; bottom: 0; background-color: rgba(0, 0, 0, .3); }
 #slider .right-block img{width: 100%;}
 @media (max-width: 768px) {
   #slider .right-block{padding: 20px 0;} 
+  #slider .left-block .title{ font-size: 33px;}
+}
+/*.scroll-img img{max-width: 100%;}*/
+.scroll-img {
+  /*width: 100%;*/
+
+  height: 230px;
+  overflow: hidden;
+  font-size: 0;
+}
+.scroll-img ul {
+  /*width: 100%;*/
+  /*height: 600px;*/
+  margin: 0; padding: 0;
+}
+.scroll-img ul li {
+  position: relative;
+  display: inline-block;
+  margin-right:5px ;
+  height: 33%;
+  /*height: 100px;*/
+}
+#carusel.scroll-img ul {
+  width: 1500px;
+}
+#carusel-btn {
+  padding-top: 10px;
 }
 
 #snowflake{ position: absolute; width: 100%; height: 100%; top: 0; left: 0; overflow: hidden;}
