--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 
 html, body{ font-family: 'PT Serif', serif; }
 html{position: relative; }
-body{font-size: 16px;}
+body{font-size: 18px;}
 /*body { margin: 0 0 400px; }*/
 /*footer { position: absolute; bottom: 0; min-height: 400px; width: 100%;}*/
 
@@ -37,6 +37,29 @@ a.totop{height: 37px; width: 37px; display: inline-block; background: url('/img/
 
 
 /*heager*/
+#logo{
+    background: url('../img/logo_arin.png') center center no-repeat transparent;
+    background-image: url('../img/logo_arin.svg'), -khtml-linear-gradient(transparent, transparent);
+    background-image: url('../img/logo_arin.svg'), -webkit-linear-gradient(transparent, transparent);
+    background-image: url('../img/logo_arin.svg'), url('logotype-trans.png');
+    background-image: url('../img/logo_arin.svg'), -ms-linear-gradient(transparent, transparent);
+    background-image: url('../img/logo_arin.svg'), linear-gradient(transparent, transparent);
+    background-image: url('../img/logo_arin.svg'), -o-linear-gradient(transparent, transparent);
+    background-repeat: no-repeat, no-repeat;
+    -moz-background-size: 0 0, 100% 100%; /* FF3.6 */
+    background-size: 100% 100%, 0 0;
+
+    /* Скрываем текст */
+    overflow: hidden;
+    text-indent: -9999px;
+    font-size: 0;
+    color: rgba(255,255,255,0);
+
+    /* Устанавливаем размеры логотипа */
+    display: block;
+    height: 179px;
+    width: 260px;
+}
 header .main-logo{margin-bottom: -50px; margin-top:15px; z-index: 10;}
 header .block-contact{margin-top: 40px; float: right;}
 header a{color: #000; }
