--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,21 +101,18 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
 #slider .right-block .top-line{background:#ff0066; color: #fff; margin-bottom: 0; padding: 4px 0;}
 #slider .right-block .title{position: absolute; width: 100%; padding: 4px 0; margin: 0; bottom: 0; background-color: rgba(0, 0, 0, .3);  text-align: center;}
 #slider .right-block img{height: 218px; width: 218px;}
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #slider .right-block{padding: 20px 0;} 
   #slider .left-block .title{ font-size: 33px; }
+  #slider .left-block {padding: 30px;}
 }
 /*.scroll-img img{max-width: 100%;}*/
 .scroll-img {
-  /*width: 100%;*/
-
   height: 230px;
   overflow: hidden;
   font-size: 0;
 }
 .scroll-img ul {
-  /*width: 100%;*/
-  /*height: 600px;*/
   margin: 0; padding: 0;
 }
 .scroll-img ul li {
@@ -123,7 +120,6 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
   display: inline-block;
   margin-right:5px ;
   height: 33%;
-  /*height: 100px;*/
 }
 #carusel.scroll-img ul {
   width: 1500px;
@@ -134,34 +130,6 @@ header .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
 
 #snowflake{ position: absolute; width: 100%; height: 100%; top: 0; left: 0; overflow: hidden;}
 .parallax-layer {position: absolute;}
-
-#slider .carousel-indicators {bottom: -45px;}
-#slider .carousel-indicators .active {background-color:#ff0066;}
-#slider .carousel-indicators li{margin: 1px 15px;}
-#slider .carousel-indicators li:before {
-  content: ''; position: absolute; margin-left: -20px; margin-top: -1px;
-display: inline-block; 
-width: 10px;
-height: 10px;
-cursor: pointer;
-background-color: #000\9;
-background-color: rgba(0,0,0,0);
-border: 1px solid #fff;
-border-radius: 10px;
-}
-#slider .carousel-indicators li:after {
-  content: ''; position: absolute; margin-left: 9px; margin-top: -1px;
-display: inline-block;
-width: 10px;
-height: 10px;
-cursor: pointer;
-background-color: #000\9;
-background-color: rgba(0,0,0,0);
-border: 1px solid #fff;
-border-radius: 10px;
-}
-#slider .carousel-indicators li.active:before{background-color:#ff0066; width: 12px; height: 12px; }
-#slider .carousel-indicators li.active:after{background-color:#ff0066;width: 12px; height: 12px; }
 
 /*we-service*/
 #we-service{padding: 50px 0}
